Dark Mode bug fix (Contact-Me Page) Linked the Company, School & Project name to URLs Broke Contact-Me page images

--- a/src/styling/dark-mode.css
+++ b/src/styling/dark-mode.css
@@ -81,7 +81,7 @@ body.dark-mode {
 }
 
 /* contact-me dark-mode setting */
-#Contact-Me-stage{
+#Contact-Me-stage.dark-mode{
     background-color: rgba(22, 24, 29, 0.9);
 }
 
